--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
 </head>
 <body>
     
-    Текущее время <br>
-    <div id='clock'></div> <br>
+    <div>
+        Today is <span id = "nowDate"></span>
+    </div>
+    <div>
+        Current time <span id="nowClock"></span>
+    </div>
+
     <canvas height='480' width='480' id='myCanvas'></canvas>
 </body>
 </html>
